--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ distlib==0.3.8
 filelock==3.15.1
 Flask==3.0.3
 Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
