--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ colorama==0.4.6
 distlib==0.3.8
 filelock==3.15.1
 Flask==3.0.3
+Flask-JWT-Extended==4.6.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+pip==24.0
 platformdirs==4.2.2
 pytz==2024.1
 six==1.16.0
