--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ distlib==0.3.8
 filelock==3.15.1
 Flask==3.0.3
 Flask-JWT-Extended==4.6.0
+Flask-Mail==0.10.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
