--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.6
 distlib==0.3.8
 filelock==3.15.1
 Flask==3.0.3
+Flask-Cors==4.0.1
 Flask-JWT-Extended==4.6.0
 Flask-Mail==0.10.0
 Flask-RESTful==0.3.10
@@ -12,7 +13,7 @@ Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
-pip==24.0
+pip==24.1.2
 platformdirs==4.2.2
 pytz==2024.1
 six==1.16.0
