--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,13 @@
 runtime: python39
 entrypoint: gunicorn -b :$PORT Basic_Hotel_API.app:app
+
+handlers:
+- url: /static
+  static_dir: static
+
+- url: /.*
+  script: auto
+
+env_variables:
+  DATABASE_URL: 'sqlite:///flaskapis.db'
+  JWT_SECRET_KEY: 'ThisIsAKey'
